@@ -3,5 +3,5 @@ using System.Reflection;
 [assembly: AssemblyTitle("iBATIS.Common")]
 [assembly: AssemblyDescription("Common object used by DataAccess and DataMapper component in iBATIS.Net")]
 	
-[assembly: AssemblyVersion("1.3")]
+[assembly: AssemblyVersion("1.4")]
 
