@@ -4,6 +4,7 @@ IBatisNet Common Change Log
 1.4 - xx/xx/xxxx
 ------------------------------
 
+- Fixed IBATISNET-145 
 
 ------------------------------
 1.3 - 15/12/2005
